--- a/_posts/2003-08-13-混乱王朝.md
+++ b/_posts/2003-08-13-混乱王朝.md
@@ -29,13 +29,13 @@ abe及其师父lucien
 
 Lucien这个ID来自巴尔扎克（Balzac，法国著名现实主义作家）小说《幻灭》里的主人公吕西安·德·吕邦泼莱（Lucien de Rubempre），当时我是巴尔扎克脑残粉。其实自从星际争霸失意之后我一直都避免玩战队，和南大的比赛是因为人不够还是怕输得太惨之类的原因被拉去的，结果据说当时观战的人莫名其妙，说“慢慢悠悠地这点一下那点一下，不知道为什么就2比0赢了”。可想而知我很喜欢魔兽3，而且构思了一个小说，虽然只写了一个开头。当时的想法是，以主人公Arthas和Thrall的经历交叉来写，用现在的话来说就是两个人的POV交叉进行，时间上是顺序进行的。比如，第一章Arthas在新兵营受欺负，结局碰到当时是奴隶的Thrall；然后第二章Thrall逃脱奴隶集中营（没写完）之后会在战场上碰到带兵的Arthas，然后第三章再接着写Arthas的事。当时当然没有《冰与火之歌》（权力的游戏原著），这种写法想模仿的作品有两部，一是双主角的天空八部（我小时候因为偷过这套书还受过通报批评的处分，有空要写一下这个故事，这是一段伟大友谊的开始），还有一个就是Jojo奇妙冒险里我觉得很“奇妙”的一段：主角Jonathan被宿敌Dio在学校排挤，连最喜欢的狗也被杀害，精神几乎被逼到绝境，但接下来一章就是三年后两人成为好友并肩作战，中间发生的事几乎全部略过。我当时非常喜欢这种“留白”的效果，因为我个人欣赏的是创造一个虚拟的世界然后让里面的人物按照某种内在逻辑自由发展，甚至人物会在其他作品里重现——没错说的就是巴尔扎克的人间喜剧。金庸虽然也会有人物重现，但故事推动主要靠奇遇和巧合，而不是内在发展规律，所以我始终认为他作为小说家只能说是二流的（做人是一流的，据说办报是一流的但是当教授做学术是三流的）。不管怎么说吧，我是希望主要描写POV，其中另一个主角的发展和其他重大历史事件会通过转述等方式体现，但最重要的还是设定完整的人物/时间线但不完全写出来，这个确实是后来《冰与火之歌》的写法。
 
-说的好像挺牛逼，但其实这个小说有两个重大的问题。第一，既然是同人小说，当然应该按同人小说的方法写，其中的原则包括不能和官方设定冲突等等。但是，我个人对Arthas堕落的原因很不满，虽然在魔兽世界里他被塑造成精神层面胜过Ner'zhul的存在，但在War3和资料片里的表现是纯粹被控制了。所以我当时的想法是，把整个世界设定成现实世界文明荒废之后重建的世界，魔法是现代科技进一步发展之后原理被遗弃的产物，所以大家都觉得很神奇，大部分使用者也是只知其然不知其所以然，但Arthas和Thrall这种天才可以掌握其中的原理（对战雷巨蜥里有所体现）。而Arthas弑父的原因就是他发现瘟疫的真相和人类高层有关，所以最后觉得抛弃整个人类文明。——显然这尼玛已经和魔兽争霸八竿子打不着了，会有人喜欢看才怪。
+说的好像挺牛逼，但其实这个小说有两个重大的问题。第一，既然是同人小说，当然应该按同人小说的方法写，其中的原则包括不能和官方设定冲突等等。但是，我个人对Arthas堕落的原因很不满，虽然在魔兽世界里他被塑造成精神层面胜过Ner'zhul的存在，但在War3和资料片里的表现是纯粹被控制了。所以我当时的想法是，把整个世界设定成现实世界文明荒废之后重建的世界，魔法是现代科技进一步发展之后原理被遗弃的产物，所以大家都觉得很神奇，大部分使用者也是只知其然不知其所以然，但Arthas和Thrall这种天才可以掌握其中的原理（对战雷巨蜥里有所体现）。而Arthas弑父的原因就是他发现瘟疫的真相和人类高层有关，所以最后决定抛弃整个人类文明。——显然这尼玛已经和魔兽争霸八竿子打不着了，会有人喜欢看才怪。
 
-而且，上面说了我本人对War3的设定本身就不满，所以官方小说也没读过，所以类似Thrall的出身全都是“错误”的。甚至连Arthas为了获得诅咒剑击晕Muradin这种重要的剧情我都打算安排成他在最后关头杀掉了青梅竹马（误）兰斯洛特，而此人在官方设定中根本就不存在。应该说我幸亏没写完，不然肯定也是一场悲剧——不是Arthas的而是我本人的。这就是题记“本文并不受来自Blizzard同名游戏的任何约束”的来历。至于专有名词云云，一来我对某些官方翻译不满，二来我根本就懒得查官方小说。
+而且，上面说了我本人对War3的设定本身就不满，官方小说也没读过，所以类似Thrall的出身全都是“错误”的。甚至连Arthas为了获得被诅咒的符文剑Frostmourne击晕Muradin这种重要的剧情我都打算安排成他在最后关头杀掉了青梅竹马（误）兰斯洛特，而此人在官方设定中根本就不存在。应该说我幸亏没写完，不然肯定也是一场悲剧——不是Arthas的而是我本人的。这就是题记“本文并不受来自Blizzard同名游戏的任何约束”的来历，可见我自己其实还是有几分自知之明的。至于专有名词云云，一来我对某些官方翻译不满，二来我根本就懒得查官方小说。
 
-接下来说第二个问题，这个致命程度不下于第一个：我的写作技巧其实很差。差到什么程度呢？我的某部书稿完全无法出版，放到起点之类的网上也无人问津。作为对比，韩寒郭敬明之类的明星不用提，一般稍微有点天赋的写手，点击率都可以混的比我好。究其原因，如果你看到这个大概早就清楚了：我的文风逻辑性太强，句子偏长，语法相当西化。这跟我小时候看过大量翻译作品有关，而且我还偏偏喜欢那种东西，而对农村题材的作品不屑一顾（虽然也读了不少）。更具体的说，我的文风根本就是模仿傅雷翻译的巴尔扎克。但是问题是，就算是原版的巴尔扎克，现在会有几个人看呢？别说别的，能找到一个写文章用分号和破折号的，我就给你一毛钱。按说既然知道是缺点就应该努力改一下，但我偏偏还有“错的不是我而是整个世界”的情结——表现就是题记里黄真人那句名言。我这种人能有所成就才怪。
+接下来说第二个问题，这个致命程度不下于第一个：我的写作技巧其实很差。差到什么程度呢？我的某部书稿完全无法出版，放到起点之类的网上也无人问津。作为对比，韩寒郭敬明之类的明星不用提，一般稍微有点天赋的写手，点击率都可以混的比我好很多。究其原因，如果你看到这里大概早就清楚了：我的文风逻辑性太强，句子偏长，语法相当西化。这跟我小时候看过大量翻译作品有关，而且我还偏偏喜欢那种东西，而对农村题材的作品不屑一顾（虽然也读了不少）。更具体的说，我的文风根本就是模仿傅雷翻译的巴尔扎克。但是问题是，就算是原版的巴尔扎克，现在会有几个人看呢？别说别的，能找到一个写文章用分号和破折号的，我就给你一毛钱。按说既然知道是缺点就应该努力改一下，但我偏偏还有“错的不是我而是整个世界”的中二情结——表现就是题记里黄真人那句名言。我这种人能有所成就才怪。
 
-综合这两点，我当时越写感觉越差，而且一时半会也想象不出来Thrall应该怎样越狱才有智将的感觉，最终就搁笔了。一晃十三年过去了，呜呼。
+综合这两点，我当时在BBS上连载，越写感觉越差，而且一时半会也想象不出来Thrall应该怎样越狱才有智将的感觉，最终就搁笔了。一晃十三年过去了，呜呼。
 <hr>
 2016-05-27
 
