--- a/_posts/2003-08-13-混乱王朝.md
+++ b/_posts/2003-08-13-混乱王朝.md
@@ -36,6 +36,8 @@ Lucien这个ID来自巴尔扎克（Balzac，法国著名现实主义作家）小
 接下来说第二个问题，这个致命程度不下于第一个：我的写作技巧其实很差。差到什么程度呢？我的某部书稿完全无法出版，放到起点之类的网上也无人问津。作为对比，韩寒郭敬明之类的明星不用提，一般稍微有点天赋的写手，点击率都可以混的比我好很多。究其原因，如果你看到这里大概早就清楚了：我的文风逻辑性太强，句子偏长，语法相当西化。这跟我小时候看过大量翻译作品有关，而且我还偏偏喜欢那种东西，而对农村题材的作品不屑一顾（虽然也读了不少）。更具体的说，我的文风根本就是模仿傅雷翻译的巴尔扎克。但是问题是，就算是原版的巴尔扎克，现在会有几个人看呢？别说别的，能找到一个写文章用分号和破折号的，我就给你一毛钱。按说既然知道是缺点就应该努力改一下，但我偏偏还有“错的不是我而是整个世界”的中二情结——表现就是题记里黄真人那句名言。我这种人能有所成就才怪。
 
 综合这两点，我当时在BBS上连载，越写感觉越差，而且一时半会也想象不出来Thrall应该怎样越狱才有智将的感觉，最终就搁笔了。一晃十三年过去了，呜呼。
+
+PS: 显然把Arthas翻译成亚瑟斯是为了照顾我们的老朋友亚瑟王Arthur，但是这并不是为了照应传说，我当时想的是借机游戏圆桌武士……亚瑟斯和兰斯洛特决斗使用的武器都和游戏角色Arthur和Lancelot的一样。
 <hr>
 2016-05-27
 
