--- a/_posts/2003-08-13-混乱王朝.md
+++ b/_posts/2003-08-13-混乱王朝.md
@@ -37,7 +37,7 @@ Lucien这个ID来自巴尔扎克（Balzac，法国著名现实主义作家）小
 
 综合这两点，我当时在BBS上连载，越写感觉越差，而且一时半会也想象不出来Thrall应该怎样越狱才有智将的感觉，最终就搁笔了。一晃十三年过去了，呜呼。
 
-PS: 显然把Arthas翻译成亚瑟斯是为了照顾我们的老朋友亚瑟王Arthur，但是这并不是为了照应传说，我当时想的是借机游戏圆桌武士……亚瑟斯和兰斯洛特决斗使用的武器都和游戏角色Arthur和Lancelot的一样。
+PS: 显然把Arthas翻译成亚瑟斯是为了照顾我们的老朋友亚瑟王Arthur，但是这并不是为了照应传说，我当时想的是街机游戏圆桌骑士……亚瑟斯和兰斯洛特决斗使用的武器都和游戏角色Arthur和Lancelot的一样。
 <hr>
 2016-05-27
 
