--- a/_posts/2007-10-28-剧本：小宝宝从哪里来.md
+++ b/_posts/2007-10-28-剧本：小宝宝从哪里来.md
@@ -5,7 +5,7 @@ date:   2007-10-28 01:26:00 +1000
 categories: 剧本 第二小学
 ---
 
-刘老按：2007年我在上海的时候，和朋友讨论过一个思路，就是做低成本原创视频，于是模仿南方公园写了这个剧本。这个方向不能说不好，尤其是考虑到前几年地方政府在这个产业投了不少钱，也许算是错过了难得的机会。但话说回来，我一来三观不正，二来没什么关系，三来切入时间如果太早的话反而会死的早（就好像iPhone之前的所有PDA一样），现在也只能这么宽慰自己了。和平台相比，我个人的兴趣其实是偏向做内容的，奈何行动力太低，专注力不够，而且社交圈子太窄，最重要的是才能运气完全没有。人生最悲哀的事莫过于此，而且别说一万年，过不了几十年估计我就挂了。这也是我开始整理年轻的时候写下的东西，和当时的心情的一个原因。算是一个老人的心态吧。
+刘老按：2007年我在上海的时候，和朋友讨论过一个思路，就是做低成本原创视频，于是模仿南方公园写了这个剧本。这个方向不能说不好，尤其是考虑到前几年地方政府在这个产业投了不少钱，也许算是错过了难得的机会。但话说回来，我一来三观不正，二来没什么关系，三来切入时间如果太早的话反而会死的早（就好像iPhone之前的所有PDA一样），现在也只能这么宽慰自己了。和平台相比，我个人的兴趣其实是偏向做内容的，奈何行动力太低，专注力不够，而且社交圈子太窄，最重要的是才能运气完全没有。人生最悲哀的事莫过于此，而且别说一万年，过不了几十年估计我就挂了。这也是我开始整理年轻的时候写下的东西，和当时的心情的一个原因。姑且算是一位老人的心态吧。
 <hr>
 2016-05-28
 
