--- a/_posts/2006-10-25-急冻侠.md
+++ b/_posts/2006-10-25-急冻侠.md
@@ -5,6 +5,12 @@ date:   2006-10-25 12:27:00 +1000
 categories: 说明
 ---
 
+刘老按：急冻侠Freezeman是我工作之后开笔的作品，算是延续了学生时代喜欢写点东西的习惯，而且是我最后一部未完成的作品。本来的设定是希望以搞笑内容开场，后来慢慢引入严肃甚至黑暗的要素；准确地说是开篇结识David，然后通过地铁一战引入侠盗缺德，随后通过侦探Douglas的故事慢慢展现主角的真正身份，不过大概是因为Battle一章写的太过恶心，以至于把自己都恶心到了，所以后面就难以为继了。
+
+主角的能力设定则是“会让身边的人在关键时刻失误”，这点除了楔子之外，和Rockies Rock一战里也有所体现。总之，本文在搞笑方面过于僵硬，前言无趣而冗长，文风一如既往地存在大量长句子，这些都是我一向的缺点。但写作的时候是努力以“电影感”来体现场景的，一边写一边还在想如何流畅地改编成分镜头剧本，这样就引入了一个缺点：场景切换对于小说而言过于僵硬。当时没有可以去解决这个问题，以后当然也不会有机会了。
+<hr>
+2016-05-28
+
 # 急·冻·侠
 
 “要钱还是要命？”
@@ -89,7 +95,7 @@ categories: 说明
 
 
 
-不知所谓的序言！
+## 不知所谓的序言！
 
 五年后。
 
@@ -131,7 +137,7 @@ categories: 说明
 
 
 
-第一章	主角出场
+## 第一章	主角出场
 
 在主角出场之前，有些话必须交代一下。
 
@@ -187,21 +193,22 @@ categories: 说明
 
 ※插播——急冻侠的个人小资料：
 
-Simple Date of Our Super Hero!!
-___________________________________
+### Simple Date of Our Super Hero!!
 
-Name: Neushall Nuthers
-Nick: News (*1)
-Artist Name: E.T. (Enough Tern, =Enaftern='N after N')
-Gender: Male
-Age: 23
-Height: 5'8"
-Weight: 165 lbs.
-Bloodtype: O
-Aka: Freeze Man (*2)
+- Name: Neushall Nuthers
+- Nick: News (*1)
+- Artist Name: E.T. (Enough Tern, =Enaftern='N after N')
+- Gender: Male
+- Age: 23
+- Height: 5'8"
+- Weight: 165 lbs.
+- Bloodtype: O
+- Aka: Freeze Man (*2)
 
-*1: Pronounce as 'Nooz' but not 'Nuse'. Don't ask me why. 'You ask me, I ask who?!? '
-*2: It's a 5-star secret!!
+Notes
+
+1. Pronounce as 'Nooz' but not 'Nuse'. Don't ask me why. 'You ask me, I ask who?!? '
+2. It's a 5-star secret!!
 
 
 
@@ -329,6 +336,7 @@ Aka: Freeze Man (*2)
 
 大胃突然站起来。他虽然是地地道道的黑人说唱歌手，可声音却并不低沉。这并不奇怪，他的声音虽然高亢，可终究也没到迈克尔·杰克逊的程度。他打开腰间的小音响（使用的是随身CD加5w无源音箱），用嘹亮的声音说唱道：
 
+```
 This kinda music, use it, and you get used to that shit
 Whenever you taste my shit you can never refuse it
 It's just shit, for you bitches, to motherfucking deal with
@@ -337,6 +345,7 @@ The type of shit blew your fuse but you dunno who produced it
 But you just know - here comes the new shit
 Compass, fuck it, our shit just causes mass confusion
 And this type of music, new shit, get people actin' stupid - It's Fight Music!
+```
 
 看着调酒师和侍者不耐烦的眼神，急冻侠知道不能在这里呆了。他匆匆——直接从大胃的口袋里掏出钱包——结了帐，拉着说唱歌手跌出了酒吧。然后，他们在路边重新坐下。
 
@@ -386,7 +395,7 @@ And this type of music, new shit, get people actin' stupid - It's Fight Music!
 
 
 
-第二章	纽约正义使者
+## 第二章	纽约正义使者
 
 首先引用急冻侠自己的一段话。
 
@@ -576,17 +585,17 @@ And this type of music, new shit, get people actin' stupid - It's Fight Music!
 
 急冻侠也一阵眩晕。他摇了摇头，慢慢站起身来，轻蔑地发出了正义的笑声。
 
-
+<br>
 
 “哼哼哼……你大概还不知道，这世界上还有‘电动假阳具’这种东西吧？在开动起来之后，它是不可能留在原地的啊……”	
 
+<br>
+
+- Rockies Rock——K·O！
 
 
-Rockies Rock——K·O！
 
-
-
-第三章	侠盗缺德
+## 第三章	侠盗缺德
 
 “啪、啪、啪……”
 
@@ -682,7 +691,7 @@ Thy precious Maria, is really le precious de New York to all. Thinkest thou so? 
 
 ※大胃不耐烦的解说：
 
-Baker（贝克）是“面包师”的意思，而Barker（巴克）则是“发出犬吠的人”……虽然拼法差不多，可对于美国人来说，究竟还是应该一眼就能看出来的。
+- Baker（贝克）是“面包师”的意思，而Barker（巴克）则是“发出犬吠的人”……虽然拼法差不多，可对于美国人来说，究竟还是应该一眼就能看出来的。
 
 
 
@@ -710,9 +719,10 @@ Baker（贝克）是“面包师”的意思，而Barker（巴克）则是“发
 
 “没办法，这种生意就是这样……”大胃解释说，“闲时闲死，忙时忙死。不过托这样的福，我才可以有足够的时间搞说唱创作……check it out, y'all, y'all...
 
+```
 Three six five, five to nine, here I come to rock yall one more time
 Feel my style, get yall high, weren't you just there standing by
-Your time, your dive, your dogging food won't drive you cry
+our time, your dive, your dogging food won't drive you cry
 So that, you lie, no thought no will you just prepare to die
 You said, he said, they said, no truth just lie, you pie
 Told you motherfucker my life is full of extreme fight
@@ -722,6 +732,7 @@ So what, you mock, you won't get it, you junk, you jerk
 Slut, guns, shot, cuts, knives, blood, those are all my key words
 White collar, Blue collar, ain't no nothing to my spiked collar
 Yall bark here, pop shit there, I shall fuck yall us over there!
+```
 
 这期间，倒也有一个客人上门，不过立刻就被吓得掩门而去。急冻侠本想好意提醒一下，但看到柜台里仅剩的两个面包，话到嘴边又咽了回去。这样，当大胃唱完之后，他一边鼓掌叫好，一边从柜台里自行取出了一个面包，一边向大胃问道：
 
@@ -761,7 +772,7 @@ Yall bark here, pop shit there, I shall fuck yall us over there!
 
 
 
-12日晚·九点十八分。美国·纽约。巴克街。
+### 12日晚·九点十八分。美国·纽约。巴克街。
 
 尼考炸司是一个稍微有点神经质的青年，从相貌上看，他比大胃更不像一个面包师。他的身材和纽歇尔差不多，一副硕大的眼镜遮住了大半张脸，头上戴着一顶厨师帽。他穿着一身干净的厨师服，在不工作的时候，两只手总喜欢叠在一起互相摩擦手心，就好像在搓面包团子一样。眼下，他满面愁容，在黑暗的屋子里焦急地来回走着。
 
@@ -991,31 +1002,31 @@ Yall bark here, pop shit there, I shall fuck yall us over there!
 
 
 
-关于玛利亚事件的后记：
+### 关于玛利亚事件的后记：
 
 
 
 在侠盗缺德的宫邸，他一边回味着玛利亚的无上美味，一边回想着急冻侠：“不简单啊，竟然看透了我的部署；幸亏在最后关头，我对法律的研究起到了戏剧性的作用……终于！终于遇到了一个水平相当的对手了！”他不由自主地流下了热泪，“终于得手一次了——虽然损失了一百美元！也许我应该让他们找零的？不过我毕竟胆小，怕他们控制不住自己，不顾法律条文痛殴我啊……”
 
-
+<br>
 
 大胃给急冻侠翻出了一张旧报纸——天知道急冻侠为什么没有看到。上面的“城市猎奇”栏目里，赫然介绍了“侠盗缺德”这样一位人物：他以发送内容低俗，文体可笑的犯罪预告为乐……本来接到恐吓的人通常都不以为意，但他竟然偏偏上门，于是三番两次受到暴打。这让急冻侠后悔不迭，发誓再也不管他妈的法律条文了。“该出手时就出手”啊！他想起了一首外国的歌……
 
-
+<br>
 
 尼考炸司受到的打击并没有大家想象的严重。他开始着手制作一位小玛利亚（Maria JR.）……用他自己的话说，“毕竟我得到了一百美元”。这让急冻侠羡慕不已。因为他为了购买那套面包师行头而花光了自己的薪水，而又不好意思找尼考炸司讨要什么报酬。“毕竟我是一位不求任何回报的正义使者，”他这样对自己说，全然忘记了自己并没有取得任何实质性的成果……
 
-
+<br>
 
 由于凌晨的冒险，周一早晨纽歇尔迟到了半个小时。面对暴跳如雷的克死你托福，他的职位重新陷入危机之中……
 
-
+<br>
 
 而我们也将进入新的一章。
 
 
 
-第四章	BATTLE
+## 第四章	BATTLE
 
 “可是看看，你把我置于了什么境地！”
 
@@ -1061,13 +1072,16 @@ Yall bark here, pop shit there, I shall fuck yall us over there!
 
 “当然！”急冻侠微微一笑，随即站起身来，用一种仿佛谈心一般的声调唱道：
 
+```
 You say you're a gangsta, but you neva pop nuttin'
 You say you're a hiphopa, but you neva share fun
 You say you do graffiti, so will you please tell me
 Wtf do you want don't you just foolin' 'round n' pop shit? (haha)
+```
 
 接着，他又用滑稽的腔调，沿着前面的节奏继续说唱，
 
+```
 Damn David, - I know all you want is fuckin' free
 But I say to thee, you just got your brain a day dream
 There's no such thing like talkin' ideal with a bitch
@@ -1080,6 +1094,7 @@ So what, my friend, the problem is you can never give a damn
 You bare fist can hit the shit but it's like a spring bed
 That's sad, acient ass, hey man you're feelin' so bad
 Cuz your struggle just like a motherfucking 'come to bay'... !!
+```
 
 话说到这里，火药味已经非常足了。但是，急冻侠并没有马上抛出自己的见解，来一段鼓舞人心的小高潮；相反，他耸了耸肩，哈哈大笑一声，就此终结。
 
@@ -1452,7 +1467,7 @@ Code of Vinci写得幼稚不过它确实也说明了一些问题
 
 
 
-深夜。贝克街。
+### 深夜。贝克街。
 
 “哎唷……”
 
@@ -1486,7 +1501,7 @@ Code of Vinci写得幼稚不过它确实也说明了一些问题
 
 
 
-间幕		侠盗缺德再登场
+## 间幕		侠盗缺德再登场
 
 “你看，这就显然不是我的问题了。”急冻侠向大胃解释道，“我说他看起来和上次差别那么大呢；很明显，那些鸽子都被团成小球藏在他的衣服里，这下能不显得臃肿么。我要是这样还能一眼认出他来，那才真是咄咄怪事呢。”
 
@@ -1520,6 +1535,8 @@ Code of Vinci写得幼稚不过它确实也说明了一些问题
 
 暂时不理大胃的愚蠢问题。虽然答案连他自己都知道，但真要好好回答它，毫无疑问我得思考……嗯，思考。说起来，人类的本质不就是思考吗？在伊甸园里，阿大和一娃吃下的那个苹果，象征的不就是智慧吗？他们正是为此而被逐出了象征着永恒的伊甸园，从此过上了充满痛苦的生活。这，就是主动去“思考”的代价吧……所谓人生，不就是在痛苦和思考中不断的徘徊吗？其实人生中哪有“快乐”这种东西；那不过是暂时忘却了痛苦罢了。但是！人生中，确是有“幸福”的！而那“幸福”，便来自于对自己信念的贯彻！哈哈哈！读者一定以为我的思路已经拐到巴拿马去了吧？错啦！想想看，信念又来自于哪里？当然是自己的思考！所以，毫无疑问，我得思考……嗯，思考。那么思考什么呢？当然是思考侠盗缺德这个人。总之，好奇怪的名字。（作者按：身为美国人的急冻侠，当然不知道在太平洋彼岸的某个岛国，传奇人物Kidd的名字非常的红火。）不过，名字这东西终究只是个代号；大多数人的名字都是在身为婴儿的时候被他人指定的，这种东西怎么会有什么现实意义呢？而且，既然不过几百年前，相当多的人都没有姓氏，那么，又有谁能说，几百年后名字这东西还会继续存在呢？虽然直到目前为止，“用编号代替姓名”还被认为是“和囚犯一样的待遇”，但是难道不能说，在信息论面前，姓名的所承载的信息量过于微小吗？不过，由于习惯的原因，我们还是一直在使用罢了。可见“习惯”是个多么强大的东西！在牛顿的宇宙里，最本质的东西就是“惯性”了。当问道“如果只能留给外星文明一样东西，那么选择那样才最能表达地球人的文明水准”的时候，纳什说过（作者按，其实不是纳什说的，急冻侠记错了），其实还是牛顿定律。牛顿定律是本质的。再推下去的话，就到了“属于上帝的领域”了……当然，相对论、量子力学、多复变分析之类的理论不是不深奥，但是，那些未免走的太分散了。说起来，它们毕竟是在牛顿理学定律和微积分理论之后才分散开的。向四面八方延伸的，人类的知识的大网，那根最粗的缆绳，其实还是抓在牛顿的手里啊。牛顿是有爵位的；那么，他取得的成就和他的地位有关系吗？我也说过，他对莱布尼兹所做的一切，实在令人无法为他开脱；不过话说回来，用现代人的判准来加以评论，对牛顿爵士毕竟不太公平。何况他的成就实在是太过伟大了……嗯，其实不光是在那个年代，“特权”是始终伴随着人类存在的东西，这点不得不承认。不过，人是有“信念”，并能以贯彻自己的信念为最高目标的存在！而整个美利坚合众国的信念，就是我们宪法的第一条啊。人类的希望是否就在这信念之中呢？我听说东方的国家，建国的基础就来自某种政治信念，那么难道全人类其实不全是一样的吗？其实这点是勿庸置疑的，但看人类对罪犯的态度就知道。像侠盗缺德这样，以一己私欲为目标，为所欲为的家伙，正是我急冻侠最大的敌人。不过呢……虽然我比谁都知道，自己对侠盗缺德的想法根本仅限于“早晚干掉这讨厌家伙”的阶段，但他的这封挑战书反而让我认识到，我确实本“应该”有别的想法的。难道伟人不是应该总设想到任何方方面面吗？虽然进行全面而谨慎的思考，经常会被认为是谨小慎微，但其实这反而是真正的勇者的思考方式罢了。逞着一时之勇，在想象中披荆斩棘地阔步前进，这样的人在现实中即便最后成功了，也只能是难得的幸运而已；事先考量好所有的情形，哪怕是最不利的意外，其实是一件相当痛苦的事情。但是！成大事者，必须要做到制订周密的作战计划！所谓“运气是实力的一部分”，指的正是强者会自己去制造机会，使得一切表面上看起来好像“运气”一样！所以，我，纽歇尔·纽瑟斯，这被纽约市民称为“急冻侠”的超级英雄，自然要对所有情况作一通盘考虑……不可否认，一般的自命聪明的家伙，在接到这封信的时候，都会自以为是地思考诸如“他这样做目的何在”之类 奈侍庀萑胙镅镒缘玫纳钤ā？晌也换嵴饷醋觥蚝芗虻ィ裣赖寥钡抡庵中〗巧静弧びΑぴ谖业淖⒁夥段е凇淙晃蚁衷谌肥涤行┰?渚玻∷灯鹄矗健叭松卸允植庞腥ぁ保侵皇侨魑难ё髌分辛钊巳饴榈谋泶锇樟恕Ｎ乙氖鞘裁矗磕训朗乔看蟮亩允致穑啃埃∥宜非蟮模比皇俏ふ灞旧砹耍灰涣礁龌导一镂以趺椿峥丛谘劾铮克匀ê庠偃吆摺?
 
+_刘老按：上段不知为什么后来成为乱码了，画点功夫应该可以恢复，不过应该不会有机会了。_
+
 大胃已经忍不住了。无论如何，这种程度的持续思考也不是简单的事儿……他正打算违背自己的一贯原则，打算表示一下对思想者的由衷的佩服的时候，急冻侠突然跳了起来，大叫道：
 
 “Go* dam* dat thick as* motherf***a! 我**的都要被解雇了，哪儿还有功夫理他那个@#$%的无聊挑战？！”
@@ -1528,7 +1545,7 @@ Code of Vinci写得幼稚不过它确实也说明了一些问题
 
 
 
-第五章	私人侦探的侦探游戏
+## 第五章	私人侦探的侦探游戏
 
 “好的，好的……已经汇到了。好……明天给你提交报告。再见。”
 
@@ -1580,432 +1597,19 @@ Code of Vinci写得幼稚不过它确实也说明了一些问题
 
 ※※倒戈拉斯英语小常识：这里打招呼的话是"Hello, Ms... ? "直译的意思是“你好，？？女士……”，也就是询问对方怎么称呼。这是因为英文称呼某人为“Ms Lee”，而中文则是“李女士”，两者语序不同的缘故。自然，回答者只需把对方的话补全即可。肉丝夫人的回答是"Rose. Glad to see you, Mr.? "。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Name:	Douglas
-Gender: Male
-Age:	44
-Motto:	"My duty is fighting. " by Perry Mason
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Christmas Special: Who Moved My Christmas Tree
-
-谁动了我的圣诞树
-
-Capitulum I - Surface
-
-“天上的太阳真亮。太阳比月亮还亮。太阳比星星还亮。”亚当认真地说。
-
-“月亮比星星亮。我最喜欢月亮。星星比月亮多。”夏娃点点头，也不知道是赞同还是补充。
-
-“有星星的时候没有云彩。有云彩的时候没有星星。”亚当打了个哈欠。
-
-“云彩是白色的。”夏娃抿抿嘴，“吃饭吧。”
-
-“好。”
-
-亚当站起身，活动活动腿脚，然后轻轻跃起，撕下一块白云递给夏娃；然后自己也扯了一块，重新坐下。两个人慢慢地吃了起来。
-
-草丛中的蛇摇了摇头，痛苦地闭上了眼睛。
-
-“如果我要是有手，就会捂住自己的脸，以表示这愚蠢的一幕对我的伤害。可是，见鬼！”蛇在内心深处咆哮道，“为什么！为什么每天都是这种比‘证明一个大偶数可以表示成两个质数的和’还没意义的对话和行动？！这甚至让我养成了在内心深处自言自语的无聊习惯，真是可悲到了极点……可是我毫无办法，是的，我没有任何办法——由于我的身份。我是谁？我是蛇。我为什么在这里？唉，我过去的‘那段’经历实在是让我恼怒到了极点。我也懒得去回忆了……不过那确是我在这里的原因；寻找机会，是的，寻找不知道在哪里的机会。可是！单单做到‘我在这里’，老实说也并不容易——虽然我已经做到了。可这只是事情的开始……”
-
-于是，蛇的思路又陷入了一条陈腐的老路，这是它曾经千百次踏上的。亚当和夏娃当然不知道这一切。他们吃完白云——其间还采了几颗星星果作为小点心——之后，就蹦蹦跳跳地跑上彩虹，手拉手在上面奔跑、跳跃。他们一会儿跑到彩虹正面，一会儿跑到彩虹背面。看着眼前的伊甸园一会儿跑到自己头顶上，一会儿又重新回到自己脚下，两人高声大笑起来。
-
-
-
-Capitulum II - Inner
-
-吃完晚饭，刷完碗之后，阿呆端端正正地坐在写字台前，取出自己的日记本，在上面端端正正地写到：
-
-“二零零四年十二月二十四日·星期五·晴
-
-“今天天气很好。我早晨吃了三个饼干，喝了一碗麦片粥。我在七点五十三分来到了班车站。班车在七点五十四分到达，然后我就上车了。然后班车就在八点十二分到达了公司。然后我开始上班。我在上午糊了两千个脚气药水的盒子。然后我就吃饭了。我在十二点十五分去了食堂。我吃了一份饭。我吃了米饭，肉，和青菜，喝了一碗黑米粥。下午我开了一个会，王经理说下周就不用糊脚气盒子了。然后我在两点多开始糊盒子。我又糊了两千个，然后就下班了。班车在五点二十五分开车。然后我回家吃了晚饭。希望下周能换点有意思的工作！”
-
-这段时间，伊芙一直在给他们的宠物狗做晚饭——虽然她早就觉得应该先给“小狐狸”（狗的名字）做饭了，但每次都习惯性地先和阿呆吃饭。收拾完毕之后，她回到屋子里，看着一笔一划奋笔徐书的阿呆，皱了皱眉，问道：“不写日记行么？”
-
-“你也不用每天都问吧……”阿呆像往常一样想着，然后照例说道：“没办法，成习惯了。”
-
-“你这个习惯哟，真是个害人的东西！”伊芙笑道。虽然这句话本身很无聊，但因为这其实是“黑炮事件”中的一句很好笑的台词，所以两人笑成一团。小狐狸也“汪、汪”地叫了起来。
-
-
-
-Capitulum III - Surface
-
-“……每天都是这些东西！这些被‘创造’出来的东西，还真是很难搞懂他们啊。”蛇继续对自己说，“真不明白他们存在的意义是什么，而且更糟糕的，是我根本不知道，他们自己为什么不去考虑这些问题！我不一样，我有自己的‘宿命’，我能看到自己的‘命运’的指引……但他们显然没有。可他们·应·该·有，至少，他们应该意识到！而且正如我早就想到的，我并不是很轻易地就能存在于‘这里’的，何况身处‘这里’终究不是我的长久之际。那个‘他’在干什么呢？他什么时候会回到这里呢？”
-
-不必讳言，这个“他”当然指的就是那个独一无二的上帝。蛇不知道，上帝此时正在独自呆着，并致力于一项相当庞大的工程——他在为自己写一部回忆录，而且采用吟唱的形式。由于他的过去实在是太庞大，太壮丽了，所以这并非易事；否则以全知全能的上帝的身份，这坨神圣的东西早就应该完成了。
-
-蛇并不知道这一切；不过它本能地预感到，事情实在是不应该一而再、再而三地往后拖。把事情搞得清清楚楚地再动手，对蛇来说一向是个坏习惯；“机会不是等来的，而是创造出来的，”蛇本身也很信奉这句话。不过呢，毕竟它曾经因为做事鲁莽而吃够了苦头，所以谁也不能怪它什么，对不对？总之，这次它可是下了决心。在做了三次深呼吸之后，它若无其事地缓缓爬了出来，向亚当和夏娃游去。
-
-“今天……天气……，哈哈哈。”
-
-因为心里有事，而且受到过去黑暗经历的影响，对自己的社交能力不太抱有信心的蛇尴尬地打了个哈哈。和它相比，心中坦坦荡荡的亚当和夏娃毫无这样那样的顾虑。他们友好地回应到：“你好，你是蛇吧？”
-
-蛇心里一惊；不过它马上就恢复了常态。本来嘛！既然本来是聋子的蛇既能说话又能交谈，那太阳底下还有什么奇妙的事情呢！于是它的态度也变得自然得多了；而且，蛇本来就是那种打开了话匣子，一时就停不下来了的那种类型。
-
-“见到你们真高兴！我看到你们幸福愉快的样子，实在是羡慕不已；二位能不能好好给我讲讲你们人生的意义所在，或者说，你们对这个问题有什么见解呢？”
-
-大体就是上面的意思，不过蛇使用了很多诸如“对二位的敬仰之情如滔滔江水，一发而不可收，又如火山迸发，岩浆荡荡乎溢流不已”之类的废话，所以这段话足足用了一天的二百分之一的时间才说完。
-
-亚当和夏娃听得目瞪口呆。他们哪儿接触过这个呀！亚当破天荒地挠了挠头。
-
-“这个，”他含糊地说，“有句话虽然上帝听了可能不会高兴，不过我一直在想，日出而乐，日落而息，上帝何有于我哉？所以么，我这个人，对离自己太远的事情，比如什么人生意义之类，并不十分在意……”
-
-“Just keep it simple and stupid - k.i.s.s., ha ha. ”为了活跃气氛，夏娃用另外一种谁都能懂的语言说道。大家哈哈大笑起来。
-
-“二位的坦荡胸襟让我茅塞顿开。其实我自己，最关心的也是蜕皮呀，窝呀之类的身边的事情……”拉了一阵家常之后，蛇拐弯抹角地说，“不过呢，我一直感到遗憾的，就是自己没有手这一点……”
-
-亚当和夏娃面面相觑。
-
-“这话怎么讲？”夏娃好奇地问。虽然她也知道，提及别人的身体是不礼貌的行为，不过既然话题是蛇主动提起的，那稍微说说也没什么吧——她这样宽慰自己——其实不过是好奇心作怪罢了。
-
-“苹果啊！”蛇长叹了一口气，“当然是上帝最宝贝的苹果了。我天资鲁钝，时常也自己苦恼来着……苹果象征着智慧，上帝一定也和你们说过吧？老实说，我在这里呆了好几天了，一直想跟上帝要个苹果的，不过一直没有等到他。——这个暂且不提。其实我自己也知道，没有手的话，苹果也不会有什么作用。”
-
-“你想吃的话我可以拿给你；”亚当厚道地说，“虽然上帝确实很宝贝苹果——也就是智慧果——但是他气度相当宏大，不会在乎这种小事情。话说回来，上帝会在乎什么呢？”
-
-“哈哈哈哈哈哈哈！”
-
-大家礼貌地笑了。
-
-哼，气度再宏大，也要竭尽全力地捍卫自己的地位。蛇心里说。想到这点，它的表情甚至也没法保持若无其事，所以，它只好顺势黯然道：“唉……问题是，智慧和大脑皮层有关，而大脑皮层又和身体各部位的反射有直接关系。你们知道吗？手的反射区的大小，和整个身体的所有其它部位相比，都只多不少呢！”
-
-蛇信口开河地说。不过，亚当和夏娃一来不喜欢较真，二来那段话术语太多，他们根本就没怎么听懂，于是只是礼貌地点了点头。
-
-但亚当终究为人厚道；看着蛇逼真的演技，他好心好意地劝道：“其实蛇也不用太在意……上帝早就跟我们提到过苹果的事情了。苹果是智慧果没错；但是，有了智慧，究竟意味着什么呢？这是很不好说的。说到底，我们何必考虑太多的事情呢？难道维持现状有什么不好吗？想想要如何享受生活，我觉得这就已经够了……”
-
-夏娃补充道：“而且，举个不太恰当的例子——你别见怪——就说刚才关于‘人生意义’的那个问题吧！我们平常，实在是不会去思考这种问题的。倒不是说得到没得到结果会有什么作用，我们没那么功利；不过呢！思考太多的话，肯定会出现更多的问题。那样的话，尽管不愿意，自己也必然会陷入迷惘的呢。我觉得那样不好！”
-
-亚当也点了点头。
-
-“我的社交能力果然有问题……”蛇暗想。心情沮丧的它也无心多留，只好强打精神道：“言之有理！我改天再来拜访！”
-
-即是是亚当和夏娃，也能从它的眼睛里看出“这两个不可救药的家伙……再也不来了”的话。因为两人早就对这番会话感到头痛了——他们平常哪里会谈论这些问题？——所以也就乐得祝蛇一路顺风。
-
-“不过……”蛇一边离开一边宽慰自己，“也许我看错了也说不定，可我确实从他们身上也看到了‘命运’的痕迹……就算再怎么不愿意，你们早晚也会踏上‘该走的道路’的……”
-
-
-
-Capitulum IV - Inner
-
-伊芙从随身包包里取出了一本有点旧的书。
-
-“我看看，”阿呆一把抢了过来，“嗯，‘谁动了我的圣诞树’。奇怪的书。”
-
-说完，他把书扔在一边，向床上倒去。
-
-“不嘛！”大为不满的伊芙把他拉了起来，“虽然是打折的旧书，不过也花了好几块钱呢！和我一起来看！”
-
-阿呆顺从地坐起来——因为伊芙拉的是他的耳朵——然后两人脸挨脸地趴在床上，慢慢看起这本名字愚蠢的书来。
-
-……
-
-“我还是不明白，蛇为什么能听见亚当和夏娃说话；”阿呆问，“蛇不是没有耳朵么？”
-
-“得啦！”遇到这种时候，伊芙总是没有办法，阿呆这人太直了。她不耐烦地说：“这不过是个故事罢了！你想想，书中的人呀蛇呀什么的，究竟用的是什么语言呢？既然语言是人本身发明的，那两个人又能发明什么语言？这只是个隐喻……”
-
-虽然阿呆一直没有真正弄懂诸如“比喻”、“借喻”、“明喻”、“暗喻”之间的区别，不过由于村上春树的泛滥，他多少能接受这种基于“隐喻”的说法。
-
-“不过这个亚当还挺像我的……”他喃喃地说，弄得伊芙哈哈大笑起来。两人再次笑成一团。
-
-小狐狸也莫名其妙地“汪汪”叫了起来。
-
-
-
-Capitulum V - Surface
-
-蛇的拜访没有给亚当和夏娃的生活带来任何变化——至少在表面上——不过他们的生活确实会有变化的，因为十二月二十五日就要来了。
-
-“这是一个节日，”上帝曾经这么说过，“或者说，这即将是个节日。无论如何，这迟早会是个节日的。”
-
-这和上帝常说的“你们要如何如何”不同，不过亚当和夏娃也不在乎。节日是什么？照上帝的说法，对于十二月二十五日来说，最重要的是一棵树，一棵“应该是最好的”的树。所以嘛，按照他说的做就对了！亚当和夏娃足足花了十五天的时间来进行准备。
-
-首先当然是选一棵“最好的”树。这点亚当和夏娃倒没有异议；无论是高度，模样，还是颜色，气质，再没有什么比智慧之树——那棵独一无二的苹果树更好的树了。但是这还不够。要让它变成“最好”的，就要用“最大的努力”，这就是亚当和夏娃的想法！他们跑来跑去，从彩虹上剪下一条条缎带，把露珠用小草穿成一串串，用鲜花和雪花做成花团……
-
-智慧树变得越来越美丽了。而且，在十二月二十五日，它将成为“圣诞树”——至少上帝是这么叫的。
-
-在这过程中，亚当和夏娃也体会到了一种和以往不同的快乐。他们越来越兴奋，越来越激动——但是，他们对自己的变化，内心深处也难免会有一丝不安。
-
-无论是谁，面对“从未经历过”的事情的时候，大概都会产生那种复杂的心情吧……
-
-不知上帝在创造亚当和夏娃的时候会吗？
-
-
-
-Capitulum VI - Inner
-
-“看到这儿，你有什么想法？”
-
-看着伊芙调皮的表情，阿呆满脸疑惑。
-
-“你是说……？”
-
-“有关于时间的，喏，就着这儿……”
-
-“不好意思，你说的是……？”
-
-“四个字！”
-
-“四个字？你——说——什——么——”
-
-“圣诞礼物！”伊芙大叫道。
-
-“哎呀！我，我竟然……”
-
-看着阿呆呆头呆脑的表情，伊芙一把把他按倒在床上。
-
-“……我竟然把礼物放在床下了！”
-
-阿呆大笑道。他轻轻地把伊芙从身上推开，伸手从床下取出一个袋子。伊芙仔细一看，不由得哈哈大小——袋子的形状就像一只打着补丁的袜子一样。
-
-“还不看看里面有什么？”阿呆嘿嘿地笑道。
-
-伊芙打开一看，笑得更加厉害了。只见里面是一双蛋黄色的毛织小袜子，样子可爱极了。
-
-两人再次在床上笑成一团。
-
-
-
-Capitulum VII - Surface
-
-伊甸园。十二月二十五日。
-
-但是，伊甸园里破天荒地没有了欢乐。
-
-因为圣诞树不见了。
-
-“最好的”圣诞树不见了。剩下的只是一棵智慧之树；一棵苹果树。
-
-现在的智慧之树就像智慧本身一样，毫无任何花巧——不但先前华丽的布置撒落了一地，而且苹果树的枝桠也被粗手粗脚地折断了好几个。智慧之果——苹果，被上帝称为“伊甸园里最特殊的东西”，也乱七八糟地掉了一地，只留下了少数的几个还挂在枝头。
-
-“谁动了我的圣诞树？”
-
-“谁动了我的圣诞树？！”
-
-“谁动了我的圣诞树？！？”
-
-
-
-Capitulum VIII - Inner
-
-阿呆和伊芙继续读着那本旧书。
-
-“亚当和夏娃的心中充满了一种奇怪的情绪，一种他们从来没有经历过的情绪——显然不是快乐，但也绝非气愤，相反，那似乎是一种‘恐惧’，一种来自内心深处的‘恐惧’，一种对‘未知’的恐惧。
-
-“会是谁呢？这里只有我们两个人；难道会是另一个人干的吗？两人当然首先会这么想。可是，这样有什么意义吗？为什么要这样做呢？出于另一个人对上帝权威的挑战吗？还是单纯是出于对现状的厌倦，而针对上帝的亵渎呢？或者，是互相之间，已经有不满，或者是厌倦的情绪了吗？是不愿分享快乐，还是认为上帝应该给创造更多同伴呢？
-
-“或者是已经不在这里的蛇？那它一定是假装离去了；可它为什么要那样做呢？或者说，它为什么一开始会现身呢？难道它和上帝有什么渊源？或者它和人之间，其实早就有某种不和谐的因素？无论是出于什么，为什么要对圣诞树动手呢？或者它想表达什么信息？总之，这一切的道理何在呢？它要做的是对物的破坏，还是对人的不安的煽动呢？
-
-“难道是伊甸园之外的，某种凶猛的，有害的动物？那它们对圣诞树到底有什么企图？是出于对伊甸园的嫉妒，而去破坏其中最美好的事物吗？还是为了让人感到痛苦和疑惑？最重要的，这是上·帝·的伊甸园，它们如何才能潜入呢？莫非，这是上帝一时疏忽的结果？或者……存不存在这样一种可能，即这是上帝对人的考验？
-
-“亚当和夏娃同时打了个寒战。因为接着再想的话……
-
-“会不会是……？
-
-“会不会这根本是上帝的杰作？！他已经对他的创造感到厌烦了，要亲手毁灭这一切；而所谓的‘圣诞树’其实只是一个信号？！
-
-“亚当和夏娃互相看了看，又看了看自己。看着赤身裸体的自己，他们同时感到一阵莫名的恐惧。两人不约而同地匆匆用植物把自己的身体遮挡起来。但是，这并不能让他们哪怕有一分安心。要知道‘事实’啊……
-
-“那么……
-
-“‘我们最需要的，不就是，也只是智慧了吗？’
-
-“亚当和夏娃彼此看了看，同时伸出了颤抖的双手，从地上各捡起一个苹果……”
-
-轮到阿呆翻页了。可是，他发现，后面的内容竟然被人扯掉了。
-
-“这个……汗。”他挠了挠头。
-
-伊芙很不好意思，毕竟是她买书的时候没小心检查。不过，看到阿呆没有责备她的意思，她有点心安，无奈地耸了耸肩。毕竟，这不是什么大事情。只不过……
-
-心里憋不住事情的阿呆还是问了：
-
-“究竟是谁动了圣诞树呢？”
-
-——完——
-
-Leo
-
-2004 12 25
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-http://www.komoo.net//comic/jojohotdb/yjump/swbj/swbj053rqf.zip
-http://www.komoo.net//comic/jojohotdb/yjump/swbj/swbj053rqs.zip
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-312904187
-111111 buchengshudewo
-45731004
-
-·不用说，本文所有关于纽约的说法都是毫无依据的，全部出自作者主观的想象。千万别当真！（不过，怎么可能有人会当真呢？）
-
-·“侠盗缺德·玛利亚事件”，明明是以亚森·罗宾的一个故事为蓝本敷衍而成的。不过又加入了两个小意外。
-
-·再次特别提醒，本文所有关于纽约的说法，包括Battle模式之类，完全出自作者的胡思乱想——也就是说，全是胡说八道！
-
-·除了Super Art和Holy Shit（这是作者喜欢的两个词，其中“超级艺术”还是作者本人所属的Studio的名字）以外，其他提到的GR团体名字都是随便起的，大多和作者从事的工作有关。
-
-·关于Censorship：比较混乱，需要的时候再行总结甚至整理吧。
-
-·Holy Shit vs Super Art的战词，其实确实是作者在奋力攻击现实中的自己。
-
-·很多战词都不是原创，而是修改的。这点也等需要的时候（比如出Soundtrack，呵呵）的时候再行总结吧……
-
-
-dpa72dse:dnu7638
-dpa72e28:csa8683
-dpa72bpk:mmv2142
-dpa72bns:duv3242
-dpa729sd:iwe6298
-dpa727nd:nga1971
-
-
-http://www.dojin2000.com/members/
-UserName = tippey
-Login = footwear
-
-http://www.dojin2000.com/members/
-UserName = superduc
-Login = roasted
-
-http://www.dojin2000.com/members/
-UserName = Skalith
-Login = shadow
-
-
-25910467 yyltl
-
-Now I'm gonna make you dance, it's your chance
-Yeah, boy, shake that ass
-Oops I mean girl - girl, girl, girl
-"Girl you know you're my world"
-Alright lose it - Ah ah ah ah ah
-Just lose it - Ah ah ah ah ah
-Go crazy - Ah ah ah ah ah ah
-Go crazy - Ah ah - oh baby, baby
+- Name:	Douglas
+- Gender: Male
+- Age: 44
+- Motto: "I fight." by Perry Mason
+
+（未完待续）
+
+## 附录
+
+- 不用说，本文所有关于纽约的说法都是毫无依据的，全部出自作者主观的想象。千万别当真！（不过，怎么可能有人会当真呢？）
+- “侠盗缺德·玛利亚事件”，明明是以亚森·罗宾的一个故事为蓝本敷衍而成的。不过又加入了两个小意外。
+- 再次特别提醒，本文所有关于纽约的说法，包括Battle模式之类，完全出自作者的胡思乱想——也就是说，全是胡说八道！
+- 除了Super Art和Holy Shit（这是作者喜欢的两个词，其中“超级艺术”还是作者本人所属的Studio的名字）以外，其他提到的GR团体名字都是随便起的，大多和作者从事的工作有关。
+- 关于Censorship：比较混乱，需要的时候再行总结甚至整理吧。
+- Holy Shit vs Super Art的战词，其实确实是作者在奋力攻击现实中的自己。
+- 很多战词都不是原创，而是修改的。这点也等需要的时候（比如出Soundtrack，呵呵）的时候再行总结吧……
