--- a/_posts/2002-01-01-白夜的协奏曲.md
+++ b/_posts/2002-01-01-白夜的协奏曲.md
@@ -5,7 +5,7 @@ date:   2002-01-01 00:00:00 +8000
 categories: 游戏 攻略
 ---
 
-刘老按：找不到是具体是那一天写的了。当时受电玩杂志影响，动不动就（笑）的写法现在看来实在是太讨厌了（这招应该是跟日本杂志学来的）。其实白夜作为2D恶魔城系列里最简单的一作，根本就不用什么完全解说……更何况我当时不知道黑曜镜之类的论坛，出城、dash cancel之类的技巧都不知道，写出来的东西实在是贻笑大方。
+按：找不到是具体是那一天写的了。当时受电玩杂志影响，动不动就（笑）的写法现在看来实在是太讨厌了（这招应该是跟日本杂志学来的）。其实白夜作为2D恶魔城系列里最简单的一作，根本就不用什么完全解说……更何况我当时不知道黑曜镜之类的论坛，出城、dash cancel之类的技巧都不知道，写出来的东西实在是贻笑大方。
 <hr>
 2016-05-28
 
