--- a/_posts/2003-08-13-混乱王朝.md
+++ b/_posts/2003-08-13-混乱王朝.md
@@ -5,7 +5,7 @@ date:   2003-08-13 21:20:00 +8000
 categories: 小说 魔兽争霸
 ---
 
-刘老按：小时候打街霸不算，我的所谓电竞之路是从1998年去各路网吧挑战星际争霸开始的开始的。当时是什么情况呢？我在《天津日报》电脑版发表过专门的对战研究文章，其中提到了Zerg 4D rush战术，恐怕是国内首家以文字的形式提到对战技巧的人（下次回家的时候要把剪报找出来）。后来因为种种原因，和我的两个朋友不同，星际争霸我没有打出什么名气。但是之后的魔兽争霸3在某个小圈子内还是有一定口碑的。
+按：小时候打街霸不算，我的所谓电竞之路是从1998年去各路网吧挑战星际争霸开始的开始的。当时是什么情况呢？我在《天津日报》电脑版发表过专门的对战研究文章，其中提到了Zerg 4D rush战术，恐怕是国内首家以文字的形式提到对战技巧的人（下次回家的时候要把剪报找出来）。后来因为种种原因，和我的两个朋友不同，星际争霸我没有打出什么名气。但是之后的魔兽争霸3在某个小圈子内还是有一定口碑的。
 
 ```
 天大求实BBS -- Warcraft精华区文章阅读
