--- a/_posts/2004-12-25-谁动了我的圣诞树.md
+++ b/_posts/2004-12-25-谁动了我的圣诞树.md
@@ -2,10 +2,10 @@
 layout: post
 title:  "谁动了我的圣诞树"
 date:   2004-12-25 00:00:00 +8000
-categories: 说明
+categories: 小说
 ---
 
-刘老按：这个圣诞节写的小短篇是拿来恶搞圣经的。主要的思路是，既然我们都知道苹果只是一种食物，并不会带来智慧，那么圣经中所谓蛇劝亚当夏娃吃苹果当然是无中生有。而如果真的是蛇让人类产生智慧的，那照实写出来就是，没必要假托苹果。所以结论是，让人类得到智慧其实是上帝的意思，而途径也并不是苹果，而是制造“危机感”。
+按：这个圣诞节写的小短篇是拿来恶搞圣经的。主要的思路是，既然我们都知道苹果只是一种食物，并不会带来智慧，那么圣经中所谓蛇劝亚当夏娃吃苹果当然是无中生有。而如果真的是蛇让人类产生智慧的，那照实写出来就是，没必要假托苹果。所以结论是，让人类得到智慧其实是上帝的意思，而途径也并不是苹果，而是制造“危机感”。
 
 换句话说，本文背后的思想是，圣经里写的是上帝不希望人类拥有智慧，但其实上帝是希望人类思考的，虽然大部分人都和阿呆跟伊芙（现代版的Adam和Eva）一样，其实并没有什么智慧。然而讽刺的是，虽然圣经的描写和真相完全相反，但结论却是正确的：智慧和快乐两者之间的关系，往往是完全相反的。
 <hr>
