--- a/_posts/2006-10-25-急冻侠.md
+++ b/_posts/2006-10-25-急冻侠.md
@@ -2,10 +2,10 @@
 layout: post
 title:  "急冻侠"
 date:   2006-10-25 12:27:00 +1000
-categories: 小说 搞笑 未完结
+categories: 小说 搞笑 未完成
 ---
 
-刘老按：急冻侠Freezeman是我工作之后开笔的作品，算是延续了学生时代喜欢写点东西的习惯，而且是我最后一部未完成的作品。本来的设定是希望以搞笑内容开场，后来慢慢引入严肃甚至黑暗的要素；准确地说是开篇结识David，然后通过地铁一战引入侠盗缺德，随后通过侦探Douglas的故事慢慢展现主角的真正身份，不过大概是因为Battle一章写的太过恶心，以至于把自己都恶心到了，所以后面就难以为继了。
+按：急冻侠Freezeman是我工作之后开笔的作品，算是延续了学生时代喜欢写点东西的习惯，而且是我最后一部未完成的作品。本来的设定是希望以搞笑内容开场，后来慢慢引入严肃甚至黑暗的要素；准确地说是开篇结识David，然后通过地铁一战引入侠盗缺德，随后通过侦探Douglas的故事慢慢展现主角的真正身份，不过大概是因为Battle一章写的太过恶心，以至于把自己都恶心到了，所以后面就难以为继了。
 
 主角的能力设定则是“会让身边的人在关键时刻失误”，这点除了楔子之外，和Rockies Rock一战里也有所体现。总之，本文在搞笑方面过于僵硬，前言无趣而冗长，文风一如既往地存在大量长句子，这些都是我一向的缺点。但写作的时候是努力以“电影感”来体现场景的，一边写一边还在想如何流畅地改编成分镜头剧本，这样就引入了一个缺点：场景切换对于小说而言过于僵硬。当时没有可以去解决这个问题，以后当然也不会有机会了。
 
