--- a/_posts/2006-12-20-NCard烧录卡评测.md
+++ b/_posts/2006-12-20-NCard烧录卡评测.md
@@ -4,7 +4,7 @@ title:  "DS烧录卡N-Card评测"
 date:   2006-12-20 19:28:00 +1000
 categories: 评测 DS 烧录卡
 ---
-刘老按：我2004年工作半年后入手了日版的任天堂DS，当时价格好像是1400，带一个220V转110V的变压器和贴膜，差不多是我一个月的工资。话说贴膜是我的超弱项，这次是我第一次也是最后一次拜托商家贴膜（当时受电玩杂志的影响都喜欢叫人家JS，我觉得挺不尊重人的，可能也是我从未被坑过的缘故），之后自己贴从来都是惨不忍睹，然后就是裸奔主义了。
+按：我2004年工作半年后入手了日版的任天堂DS，当时价格好像是1400，带一个220V转110V的变压器和贴膜，差不多是我一个月的工资。话说贴膜是我的超弱项，这次是我第一次也是最后一次拜托商家贴膜（当时受电玩杂志的影响都喜欢叫人家JS，我觉得挺不尊重人的，可能也是我从未被坑过的缘故），之后自己贴从来都是惨不忍睹，然后就是裸奔主义了。
 
 我当时买DS最想玩的就是恶魔城，不巧当头没货，就交了250拿了个星之卡比回家，一周后又骑车过去换了350的恶魔城（当时说好可以换卡）。12月份北方的冬天，骑车半小时去买游戏，现在想想真是三岁看老……后来除了几个卖几十块钱的盗版GBA恶魔城游戏（我记得白夜我是买了，月轮记不清了，晓夜可能是找我弟借的）之外，没有买别的游戏，后来就入手了烧录卡SuperCard。此卡是GBA时代的产物，插在GBA卡槽，相当费电（一共7小时的电量，用了SuperCard大概只能用5小时）。后来我在去深圳的卧铺上全靠这个组合消磨时光了。
 
