--- a/_posts/2000-01-01-未完成作品合集.md
+++ b/_posts/2000-01-01-未完成作品合集.md
@@ -26,6 +26,11 @@ categories: 小说 未完成 朵朵
 顺便说一句，在朵朵挑战吸血鬼的时候，小龙被卷进了另一个事件，最终发现了自己其实是幸存的恐龙后裔这个真相。至于朵朵和小龙能否阻止正在打算重启文明的恐龙一族，甚至小龙还会不会和朵朵一起站在人类的一边，我这辈子大概是无法看到了。
 
 思考到这里，我对自己的想象力比较满意，然后再说回来征文比赛的事。最后的结果是，一篇把恐龙灭绝的原因归结为陨石撞击的文章获得了第一名。我觉得太扯淡了：陨石灭绝论几乎已经是学界定论了，这跟想象力有毛关系啊！哪怕是恐龙放屁导致温室气体增加最终死于气候紊乱也比这个强啊！而且严格地说放屁理论也是跟想象力没半毛钱关系的已经存在了几十年的假说了啊！直到现在我都觉得自己的想象力完爆第一名。
+
+### 越狱进行中·死刑执行中
+
+很显然是Jojo同人文。从前后相关文档来看，大概写于2002年10月到12月之间。只有个开头。
+
 <hr>
 2016-05-28
 
@@ -283,3 +288,21 @@ categories: 小说 未完成 朵朵
 “啊，你终于来了！”
 
 （未完待续）
+
+# 越狱进行中·死刑执行中
+
+“……依法判处死刑，剥夺政治权利终身。”
+
+作为宣判罪犯命运的法官，这种话即使不一定经常说出，但说这话的时候，心里也不会有什么特别的感觉吧？“善解人意”也许是公认的优点，但谁又能真正理解他人的感情呢？但是，我却可以完完全全地理解作为一个死刑犯的感觉。
+
+原因很简单，我就是一个死刑犯。
+
+在这个时候还说些关于过去的话未免显得愚蠢，不过我要说，对我过去做过的一切，我并不感到后悔。没有人能抑止指甲的生长吧？同样，也没人能抑止自己“与生俱来的天性”……“向拥有美丽手指的女人倾诉自己的心情”，这就是我的生存意义，虽然是用我“自己的方式”倾诉心情……我很讨厌被人用“杀人狂”这种粗俗的词语来形容，不过眼下，我有更重要的事情要考虑。
+
+那就是“越狱”。
+
+以前我也曾经感到很奇怪：总所周知，所有生物存在的意义只有两个，一是“留下自己的后代”，另一个，也是更重要的一个，就是“求生存”。作为就要被剥夺生命的人，应该用尽一切方式来尝试越狱，来求得自己的生存；可是为什么大多数死刑犯在生命的最后却在“后悔”呢（虽然这只是官方的说法但至少也有百分之五十的准确度）？但我现在明白了，国家机器显然更懂的人类的天性，它的做法很简单，但却绝对有效，那就是“不留下任何机会”。
+
+在历史上，越狱的人也许有不少，但成功越狱的人就不多了。至于成功越狱的死刑犯，“羚羊挂角”这个词简直就是个绝妙的双关语。
+
+不过即便如此，我也不会“绝望”；谁也不能预言将来会发生什么，明天就是死刑执行的日子。我的心里既没有“后悔”也没有“绝望”，因为我相信，只要生命没有……（未完待续）
