--- a/_posts/2002-01-03-学习三个代表的体会.md
+++ b/_posts/2002-01-03-学习三个代表的体会.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "学习三个代表的体会"
 date:   2002-01-03 00:00:00 +8000
-categories: 三个代表
+categories: 政治 谎言 三个代表
 ---
 
 按：本文应该是一个作业，具体是哪个课程，和写作时间都不可考了。文中的观点我当然一个字都不相信。本文档的文件名是`fuckzjm.txt`，可想而知。
