--- a/_posts/2016-05-27-一点说明.md
+++ b/_posts/2016-05-27-一点说明.md
@@ -4,22 +4,11 @@ title:  "一点说明"
 date:   2016-05-27 00:00:00 +8000
 categories: 说明
 ---
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
-To add new posts, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
+确定文档时间的方法主要有三个：
 
-Jekyll also offers powerful support for code snippets:
+- 文档保存/修改时间，这个可以精确到分钟
+- 落款时间，一般精确到月或者日
+- 通过前后相关文档的落款推测
 
-{% highlight ruby %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
-
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
-
-[jekyll-docs]: http://jekyllrb.com/docs/home
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-talk]: https://talk.jekyllrb.com/
+我在98、99年，放假的时候租过电脑，真正自己买的是在2000年。2006年在深圳买了一台台式机，2008年的时候换成HP V6000装了个黑苹果，年底买了一台MacBook Pro，然后2011年和2014年分别买了一台iMac。经过各种复制备份，很多文档的时间已经变成了，我只能尽量精确地重现写作时间。
