--- a/_posts/2002-10-02-视觉欺骗.md
+++ b/_posts/2002-10-02-视觉欺骗.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "视觉欺骗"
 date:   2002-10-02 00:00:00 +8000
-categories: 游戏理论
+categories: 游戏理论 全息 VR 3D
 ---
 
 按：本文应为投稿文章，是否发表记不清了。话说从最后一段看，虽然今年被称为虚拟现实元年，但14年之前我就对VR寄予厚望了。啧啧。
